--- a/project/Build.xml
+++ b/project/Build.xml
@@ -27,7 +27,7 @@
   <files id="std"/>
   <lib name="ws2_32.lib" if="windows" unless="static_link" />
   <lib name="-lsocket" if="blackberry" unless="static_link" />
-  <outdir name="${DESTDIR}/${BINDIR}"/>
+  <outdir name="${HAXELIB_STAGED_DIR}/${DESTDIR}/${BINDIR}"/>
 </target>
 
 <set name="PCRE_DIR" value="../../thirdparty/pcre-7.8" />
@@ -70,7 +70,7 @@
 <target id="regexp" output="${LIBPREFIX}regexp${LIB_DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="regexp"/>
   <builddir name="libs/regexp" />
-  <outdir name="${DESTDIR}/${BINDIR}"/>
+  <outdir name="${HAXELIB_STAGED_DIR}/${DESTDIR}/${BINDIR}"/>
 </target>
 
 <set name="ZLIB_DIR" value="../../thirdparty/zlib-1.2.3"/>
@@ -102,7 +102,7 @@
 
 <target id="zlib" output="${LIBPREFIX}zlib${LIB_DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="zlib"/>
-  <outdir name="${DESTDIR}/${BINDIR}"/>
+  <outdir name="${HAXELIB_STAGED_DIR}/${DESTDIR}/${BINDIR}"/>
   <builddir name="libs/zlib"/>
 </target>
 
@@ -123,7 +123,7 @@
   <files id="mysql"/>
   <builddir name="libs/mysql"/>
   <lib name="ws2_32.lib" if="windows" unless="static_link" />
-  <outdir name="${DESTDIR}/${BINDIR}"/>
+  <outdir name="${HAXELIB_STAGED_DIR}/${DESTDIR}/${BINDIR}"/>
 </target>
 
 
@@ -139,7 +139,7 @@
 <target id="sqlite" output="${LIBPREFIX}sqlite${LIB_DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="sqlite"/>
   <builddir name="libs/sqlite"/>
-  <outdir name="${DESTDIR}/${BINDIR}"/>
+  <outdir name="${HAXELIB_STAGED_DIR}/${DESTDIR}/${BINDIR}"/>
   <lib name="-lpthread" if="linux" unless="static_link" />
 </target>
 
