TiVo changes after base git commit 437b35035de4f2578eadc289700f91577a4c131c

--- a/project/libs/sqlite/Build.xml
+++ b/project/libs/sqlite/Build.xml
@@ -23,7 +23,7 @@
 <target id="sqlite" output="${HX_TARGET_PREFIX}sqlite${LIB_DBG}${HX_TARGET_SUFFIX}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="sqlite"/>
   <lib name="-lpthread" if="linux" unless="static_link" />
-  <outdir name="../../../${DESTDIR}/${BINDIR}"/>
+  <outdir name="${PREBINDIR}/${BINDIR}"/>
 </target>
 
 
