--- a/project/Build.xml
+++ b/project/Build.xml
@@ -20,7 +20,7 @@
 <target id="msvccompat" output="${HX_TARGET_PREFIX}msvccompat${LIB_DBG}-${MSVC_VER}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="msvccompat"/>
   <builddir name="libs/msvccompat"/>
-  <outdir name="${this_dir}/../${DESTDIR}/${BINDIR}"/>
+  <outdir name="${PREBINDIR}/${BINDIR}"/>
 </target>
 
 
@@ -32,7 +32,7 @@
 <target id="linuxcompat" output="${HX_TARGET_PREFIX}linuxcompat${HX_TARGET_SUFFIX}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="linuxcompat"/>
   <builddir name="libs/linuxcompat"/>
-  <outdir name="${this_dir}/../${DESTDIR}/${BINDIR}"/>
+  <outdir name="${PREBINDIR}/${BINDIR}"/>
 </target>
 
 
@@ -49,7 +49,7 @@
 
 <set name="neko_v2" value="1" unless="neko_v1" />
 
-<set name="NEKO_LIB_DIR" value="bin/${BINDIR}" />
+<set name="NEKO_LIB_DIR" value="${PREBINDIR}/${BINDIR}" />
 
 <target id="nekoapi" output="nekoapi" tool="linker" toolid="dll">
   <ext value=".ndll"/>
@@ -58,7 +58,7 @@
   <lib name="${NEKO_LIB_DIR}/neko.lib" if="windows" />
   <lib name="-L${NEKO_LIB_DIR}" unless="windows"/>
   <lib name="-lneko" unless="windows"/>
-  <outdir name="${this_dir}/../bin/${BINDIR}"/>
+  <outdir name="${PREBINDIR}/${BINDIR}"/>
 </target>
 
 
@@ -67,8 +67,9 @@
    <target id="std"/>
    <target id="regexp"/>
    <target id="zlib"/>
-   <target id="mysql"/>
-   <target id="sqlite"/>
+   <!-- TiVo disables some libraries that are not available for STB targets -->
+   <target id="mysql" unless="tivo" />
+   <target id="sqlite" unless="tivo" />
    <section if="static_link">
       <target id="msvccompat" if="windows" unless="mingw||MSVC19" />
       <target id="linuxcompat" if="linux" />
