--- a/project/libs/regexp/Build.xml
+++ b/project/libs/regexp/Build.xml
@@ -50,7 +50,7 @@
 
 <target id="regexp" output="${HX_TARGET_PREFIX}regexp${LIB_DBG}${HX_TARGET_SUFFIX}" tool="linker" toolid="${STD_MODULE_LINK}">
   <files id="regexp"/>
-  <outdir name="../../../${DESTDIR}/${BINDIR}"/>
+  <outdir name="${PREBINDIR}/${BINDIR}"/>
 </target>
 
 </xml>
