--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
         - ARCH=32
       install:
         - bash tools/haxe/build_linux.sh
-        - travis_retry sudo apt-get install gcc-multilib g++-multilib -y;
+        - travis_retry sudo apt-get install gcc-multilib g++-multilib gdb -y;
     - os: linux
       dist: trusty
       env:
@@ -33,6 +33,13 @@ matrix:
         - ARCH=64
       install:
         - bash tools/haxe/build_osx.sh;
+
+before_script:
+- ulimit -c unlimited -S       # enable core dumps
+
+after_failure:
+- COREFILE=$(find . -maxdepth 1 -name "core*" | head -n 1) # find core file
+- if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" example -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
 
 script:
   - cd ${TRAVIS_BUILD_DIR}/tools/run
