--- a/.travis.yml
+++ b/.travis.yml
@@ -13,26 +13,26 @@ matrix:
       env:
         - ARCH=32
       install:
-        - bash tools/haxe/build_linux.sh development https://github.com/HaxeFoundation/haxe.git
+        - bash tools/haxe/build_linux.sh https://github.com/HaxeFoundation/haxe.git development
         - travis_retry sudo apt-get install gcc-multilib g++-multilib gdb -y;
     - os: linux
       dist: trusty
       env:
         - ARCH=64
       install:
-        - bash tools/haxe/build_linux.sh development https://github.com/HaxeFoundation/haxe.git;
+        - bash tools/haxe/build_linux.sh https://github.com/HaxeFoundation/haxe.git development;
     - os: osx
       osx_image: xcode9.4
       env:
         - ARCH=32
       install:
-        - bash tools/haxe/build_osx.sh development https://github.com/HaxeFoundation/haxe.git;
+        - bash tools/haxe/build_osx.sh https://github.com/HaxeFoundation/haxe.git development;
     - os: osx
       osx_image: xcode9.4
       env:
         - ARCH=64
       install:
-        - bash tools/haxe/build_osx.sh development https://github.com/HaxeFoundation/haxe.git;
+        - bash tools/haxe/build_osx.sh https://github.com/HaxeFoundation/haxe.git development;
 
 before_script:
 - ulimit -c unlimited -S       # enable core dumps
